// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
>
  <path
    d="M0 8h15.5m-6-6l6 6-6 6"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  className="lucid-ArrowIcon lucid-ArrowIcon-is-up"
>
  <path
    d="M0 8h15.5m-6-6l6 6-6 6"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  className="lucid-ArrowIcon lucid-ArrowIcon-is-down"
>
  <path
    d="M0 8h15.5m-6-6l6 6-6 6"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  className="lucid-ArrowIcon lucid-ArrowIcon-is-right"
>
  <path
    d="M0 8h15.5m-6-6l6 6-6 6"
  />
</Icon>
`;

exports[`ArrowIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  className="lucid-ArrowIcon lucid-ArrowIcon-is-left"
>
  <path
    d="M0 8h15.5m-6-6l6 6-6 6"
  />
</Icon>
`;
